--- a/cat-clicker/style.css
+++ b/cat-clicker/style.css
@@ -2,7 +2,7 @@
     box-sizing: border-box;
 }
 
-#catTitle {
+#cat-name {
     color: rgb(71, 189, 175);
     text-transform: uppercase;
     font-weight: bold;
@@ -11,13 +11,22 @@
     font-size: 30px;   
 }
 
-#catCount {
+#cat-count {
     color: rgb(71, 189, 175);
     text-transform: uppercase;
     font-weight: bold;
     text-align: center;
     margin-bottom: 20px;
     font-size: 50px;   
+}
+
+#cat-img {
+    width: 40%;
+}
+
+#cat-img:hover {
+    width: 41%;
+    cursor: pointer;
 }
 
 .brand-logo {
@@ -38,9 +47,13 @@
     cursor: pointer;
 }
 
-h4 {
+h3 {
     color: rgb(71, 189, 175);
     font-weight: bold;
     text-align: center;
-    font-size: 100px;   
+    font-size: 30px;   
+}
+
+footer {
+    margin-top: 100px;
 }
